--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -72,3 +72,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/Aura.AuraEffectActor.OnOnverlap",NewName="/Script/Aura.AuraEffectActor.OnOnoverlap")
++FunctionRedirects=(OldName="/Script/Aura.AuraEffectActor.OnOnoverlap",NewName="/Script/Aura.AuraEffectActor.OnOnOverlap")
