Infinite Effect Application and Removal

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -76,3 +76,4 @@ ManualIPAddress=
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/Aura.AuraEffectActor.OnOnverlap",NewName="/Script/Aura.AuraEffectActor.OnOnoverlap")
 +FunctionRedirects=(OldName="/Script/Aura.AuraEffectActor.OnOnoverlap",NewName="/Script/Aura.AuraEffectActor.OnOnOverlap")
++EnumRedirects=(OldName="/Script/Aura.EEffectRemovalPolicy",ValueChanges=(("RemoveOnOverlap","RemoveOnEndOverlap")))
