Aura Asset Manager

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -57,6 +57,7 @@ bAuthorizeAutomaticWidgetVariableCreation=False
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/Aura")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/Aura")
+AssetManagerClassName=/Script/Aura.AuraAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -77,3 +78,4 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Aura.AuraEffectActor.OnOnverlap",NewName="/Script/Aura.AuraEffectActor.OnOnoverlap")
 +FunctionRedirects=(OldName="/Script/Aura.AuraEffectActor.OnOnoverlap",NewName="/Script/Aura.AuraEffectActor.OnOnOverlap")
 +EnumRedirects=(OldName="/Script/Aura.EEffectRemovalPolicy",ValueChanges=(("RemoveOnOverlap","RemoveOnEndOverlap")))
+
