Implementing Auto Running

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -79,3 +79,6 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Aura.AuraEffectActor.OnOnoverlap",NewName="/Script/Aura.AuraEffectActor.OnOnOverlap")
 +EnumRedirects=(OldName="/Script/Aura.EEffectRemovalPolicy",ValueChanges=(("RemoveOnOverlap","RemoveOnEndOverlap")))
 
+[/Script/NavigationSystem.NavigationSystemV1]
+bAllowClientSideNavigation=True
+
