Character Class Info

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -78,6 +78,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Aura.AuraEffectActor.OnOnverlap",NewName="/Script/Aura.AuraEffectActor.OnOnoverlap")
 +FunctionRedirects=(OldName="/Script/Aura.AuraEffectActor.OnOnoverlap",NewName="/Script/Aura.AuraEffectActor.OnOnOverlap")
 +EnumRedirects=(OldName="/Script/Aura.EEffectRemovalPolicy",ValueChanges=(("RemoveOnOverlap","RemoveOnEndOverlap")))
++StructRedirects=(OldName="/Script/Aura.CharacterClassInfo",NewName="/Script/Aura.CharacterDefaultClassInfo")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
