Showing Damage Text

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -79,6 +79,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Aura.AuraEffectActor.OnOnoverlap",NewName="/Script/Aura.AuraEffectActor.OnOnOverlap")
 +EnumRedirects=(OldName="/Script/Aura.EEffectRemovalPolicy",ValueChanges=(("RemoveOnOverlap","RemoveOnEndOverlap")))
 +StructRedirects=(OldName="/Script/Aura.CharacterClassInfo",NewName="/Script/Aura.CharacterDefaultClassInfo")
++FunctionRedirects=(OldName="/Script/Aura.AuraPlayerController.ShowDamagetNumber",NewName="/Script/Aura.AuraPlayerController.ShowDamageNumber")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
