Using a Custom Effect Context

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -80,6 +80,10 @@ ManualIPAddress=
 +EnumRedirects=(OldName="/Script/Aura.EEffectRemovalPolicy",ValueChanges=(("RemoveOnOverlap","RemoveOnEndOverlap")))
 +StructRedirects=(OldName="/Script/Aura.CharacterClassInfo",NewName="/Script/Aura.CharacterDefaultClassInfo")
 +FunctionRedirects=(OldName="/Script/Aura.AuraPlayerController.ShowDamagetNumber",NewName="/Script/Aura.AuraPlayerController.ShowDamageNumber")
++FunctionRedirects=(OldName="/Script/Aura.AuraAbilitySystemLibrary.IsBlockedHit",NewName="/Script/Aura.AuraAbilitySystemLibrary.IsBlockHit")
++FunctionRedirects=(OldName="/Script/Aura.AuraAbilitySystemLibrary.IsCriticalHit",NewName="/Script/Aura.AuraAbilitySystemLibrary.IsCriticaledHit")
++FunctionRedirects=(OldName="/Script/Aura.AuraAbilitySystemLibrary.IsCriticaledHit",NewName="/Script/Aura.AuraAbilitySystemLibrary.IsCriticalledHit")
++FunctionRedirects=(OldName="/Script/Aura.AuraAbilitySystemLibrary.IsBlockHit",NewName="/Script/Aura.AuraAbilitySystemLibrary.IsBlockedHit")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
