--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -84,6 +84,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Aura.AuraAbilitySystemLibrary.IsCriticalHit",NewName="/Script/Aura.AuraAbilitySystemLibrary.IsCriticaledHit")
 +FunctionRedirects=(OldName="/Script/Aura.AuraAbilitySystemLibrary.IsCriticaledHit",NewName="/Script/Aura.AuraAbilitySystemLibrary.IsCriticalledHit")
 +FunctionRedirects=(OldName="/Script/Aura.AuraAbilitySystemLibrary.IsBlockHit",NewName="/Script/Aura.AuraAbilitySystemLibrary.IsBlockedHit")
++PropertyRedirects=(OldName="/Script/Aura.AuraEffectActor.bDestroyOnEffectRemoval",NewName="/Script/Aura.AuraEffectActor.bDestroyOnEffectApplication")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
