Melee Attack Ability

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -85,6 +85,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Aura.AuraAbilitySystemLibrary.IsCriticaledHit",NewName="/Script/Aura.AuraAbilitySystemLibrary.IsCriticalledHit")
 +FunctionRedirects=(OldName="/Script/Aura.AuraAbilitySystemLibrary.IsBlockHit",NewName="/Script/Aura.AuraAbilitySystemLibrary.IsBlockedHit")
 +PropertyRedirects=(OldName="/Script/Aura.AuraEffectActor.bDestroyOnEffectRemoval",NewName="/Script/Aura.AuraEffectActor.bDestroyOnEffectApplication")
++PropertyRedirects=(OldName="/Script/Aura.CharacterClassDefaultInfo.CommonAbilities",NewName="/Script/Aura.CharacterClassDefaultInfo.StartupAbilities")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
