--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -86,6 +86,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Aura.AuraAbilitySystemLibrary.IsBlockHit",NewName="/Script/Aura.AuraAbilitySystemLibrary.IsBlockedHit")
 +PropertyRedirects=(OldName="/Script/Aura.AuraEffectActor.bDestroyOnEffectRemoval",NewName="/Script/Aura.AuraEffectActor.bDestroyOnEffectApplication")
 +PropertyRedirects=(OldName="/Script/Aura.CharacterClassDefaultInfo.CommonAbilities",NewName="/Script/Aura.CharacterClassDefaultInfo.StartupAbilities")
++PropertyRedirects=(OldName="/Script/Aura.AuraMyCharacterBase.DeadSound",NewName="/Script/Aura.AuraMyCharacterBase.DeathSound")
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAllowClientSideNavigation=True
